Fix: Raise one z-index level for Deep nav, preventing covered by footer

--- a/css/nav.css
+++ b/css/nav.css
@@ -33,7 +33,8 @@
 	position:relative;
 	float:left;
 	margin:0;
-	padding:0
+	padding:0;
+  z-index: 1;
 }
 
 #primary_nav_wrap ul li.current-menu-item
